--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,11 @@
 doctype
 html
 	head
-		title #{title} - My Site
+		title #{title} - Chen Node
 		link(rel='stylesheet', href='/stylesheets/style.css')
 	body
 		header
-			h1 My Site
+			h1 Chen Node
 		.container
 			.main-content
 				block content
