--- a/views/upload.jade
+++ b/views/upload.jade
@@ -1,5 +1,5 @@
 extend layout
 block content
-	form(action="/file/upload/process", method="post", enctype="multipart/form-data")
+	form(action="/file/upload", method="post", enctype="multipart/form-data")
 		input(type="file", name="file")
 		input(type="submit", value="Upload")
